# 10100100

./: README.md  camera.sh  microsoft®_lifecam_studio(tm):.yaml  points0.txt  points1.txt  points2.txt  points3.txt  points4.txt  points5.txt  setupRealur5e.sh  startup.sh  test.txt
custom_messages/: CMakeLists.txt  package.xml
custom_messages/msg/: ArucoMessage.msg
endEffector/: CMakeLists.txt  package.xml
endEffector/launch/: display.launch  gazebo.launch
endEffector/meshes/: base_link.STL  link_1.STL
endEffector/urdf/: endEffector.csv  endEffector.urdf
image_processing/: package.xml  setup.py
image_processing/image_processing/: smile_detector_node.py
image_processing/src/: countour_detection.py
locator/: CMakeLists.txt  package.xml
locator/src/ros2_aruco/ros2_aruco/: aruco_generate_marker.py  aruco_node.py
locator/src/transforms/: CMakeLists.txt  package.xml
locator/src/transforms/src/: paper.cpp  path.cpp  static_camera_transform.cpp
path_planning/: CMakeLists.txt
path_planning/src/: brain_node.cpp  movit.cpp
src/custom_messages/: CMakeLists.txt  package.xml
src/custom_messages/msg/: RobotAction.msg
src/custom_messages/srv/: PathClient.srv
src/image_process/: package.xml  setup.cfg  setup.py
src/image_processing/: package.xml  setup.cfg  setup.py
src/image_processing/image_processing/: contour_detection_node.py  contour_points.py  dummy_camera_info.py  dummy_smile_pub.py  lines.py  smile_detector_node.py  test_img_publisher.py  test_pub_robot_action.py
src/image_processing/src/: countour_detection.py
src/launch_10100100/: CMakeLists.txt  package.xml
src/launch_10100100/launch/: dummy_info.launch.py  launch_all.launch.py
src/launch_nodes/: package.xml  setup.cfg  setup.py
src/locator/: CMakeLists.txt  package.xml
src/path_planning/: CMakeLists.txt  package.xml
src/path_planning/launch/: move_command.launch.py
src/path_planning/src/: brain_node.cpp  move_command.cpp  moveit.cpp  path_planning.cpp
src/ros2_aruco/config/: aruco_parameters.yaml
src/ros2_aruco/ros2_aruco/: aruco_node.py
src/transforms/: CMakeLists.txt  package.xml
src/transforms/scripts/: lines.py
src/transforms/src/: paper.cpp  static_camera_transform.cpp
src/util_arduino_serial/util_arduino_serial/: util_arduino_serial.py
