<?xml version="1.0"?>
<package format="3">
  <name>transforms</name>
  <version>0.1.0</version>
  <description>A ROS 2 package for handling transforms</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>
  
  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>ros2_aruco_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>custom_messages</depend> <!-- Add your custom message package -->
  <depend>sensor_msgs</depend>

  <!-- Optionally, specify test dependencies, author, and copyright information -->
  <test_depend>ament_lint_auto</test_depend>

  <!-- Specify the export tag if needed for exporting package-specific information -->
  <export>
    <!-- Optionally add export information here -->
  </export>
</package>
